--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: false
+
 language: php
 
 php:
@@ -6,9 +8,14 @@ php:
   - 5.6
   - 7.0
 
+env:
+  matrix:
+    - PREFER_LOWEST="--prefer-lowest"
+    - PREFER_LOWEST=""
+
 before_script:
   - composer self-update
-  - composer install --prefer-source
+  - composer update --prefer-source $PREFER_LOWEST
   - mkdir -p test/_build
 
 script:
